--- a/index.html
+++ b/index.html
@@ -818,15 +818,21 @@
     </section>
 
     <section id="contact">
-        <h2>Contact Me</h2>
-        <form class="contact">
-            <input type="text" placeholder="Your Name" required>
-            <input type="email" placeholder="Your Email" required>
-            <textarea placeholder="Your Message" rows="5" required></textarea>
-            <button type="submit">Send Message</button>
-        </form>
-    </section>
+    <h2>Contact Me</h2>
+    <div class="contact-links">
+        <a href="https://wa.me/1234567890" class="contact-icon whatsapp" target="_blank">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="icon">
+                <path d="M380.9 97.1c-44.5-44.5-104-69.1-167.1-69.1C96.1 28 0 124.1 0 244c0 43.4 11.3 85.3 32.7 122.6L1 479.3c-2.3 9.7 7.3 18.1 17.3 15.7l115.8-30.4C169.1 481.3 206 496 244 496c119.9 0 216-96.1 216-216 .1-63.1-24.6-122.6-69.1-167.1zm-164.6 334c-34.5 0-68.5-10.1-97.5-29.1l-6.9-4.4-68.7 18.1 18.3-66.5-4.5-7C37.1 308.2 28 276.1 28 244 28 135.9 123.9 40 244 40c65.2 0 126.5 25.4 172.5 71.5 46 46 71.5 107.3 71.5 172.5 0 120.1-95.9 216-216 216z" />
+                <path d="M338.3 290.4l-48.2-24.1c-6.4-3.2-14.3-2.5-20.1 1.8l-17.8 13.5c-10.4-6.2-33.7-20.5-53.1-53.2l13.5-17.8c4.3-5.8 5-13.7 1.8-20.1l-24.1-48.2c-6-11.9-21.3-15.6-32.3-8.2l-30.6 20.4c-7.1 4.8-11.3 12.9-11.3 21.5 0 35.8 15.3 73.5 45.6 112.2 30.3 38.8 68.5 65.3 111.6 78.4 8.8 2.5 18.4 1.1 25.9-4.1l30.6-20.4c11.3-7.5 14.9-22.8 8.9-34.7z" />
+            </svg>
+            <span>WhatsApp</span>
+        </a>
 
+        <a href="https://instagram.com/yourusername" class="contact-icon instagram" target="_blank">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="icon">
+                <path d="M224 202.7c-31.2 0-56.3 25.1-56.3 56.3s25.1 56.3 56.3 56.3 56.3-25.1 56.3-56.3-25.1-56.3-56.3-56.3zm124.7 56.3c0 68.9-56.1 125-125 125s-125-56.1-125-125 56.1-125 125-125 125 56.1 125 125zm76.6-125.3c0-16.8-13.6-30.4-30.4-30.4s-30.4 13.6-30.4 30.4 13.6 30.4 30.4 30.4 30.4-13.6 30.4-30.4zm46.7 125.3c0-45.5-3.6-77.8-11.7-105.2-8.2-28-21.7-51.6-40.3-70.3-18.7-18.7-42.3-32.2-70.3-40.3-27.4-8.1-59.7-11.7-105.2-11.7s-77.8 3.6-105.2 11.7c-28 8.2-51.6 21.7-70.3 40.3-18.7 18.7-32.2 42.3-40.3 70.3-8.1 27.4-11.7 59.7-11.7 105.2s3.6 77.8 11.7 105.2c8.2 28 21.7 51.6 40.3 70.3 18.7 18.7 42.3 32.2 70.3 40.3 27.4 8.1 59.7 11.7 105.2 11.7s77.8-3.6 105.2-11.7c28-8.2 51.6-21.7 70.3-40.3 18.7-18.7 32.2-42.3 40.3-70.3 8.1-27.4 11.7-59.7 11.7-105.2zm-46.7 208c-7.8 20.1-23.6 35.9-43.7 43.7-30.4 11.9-102.1 11.5-136.6 11.5s-106.3 .4-136.6-11.5c-20.1-7.8-35.9-23.6-43.7-43.7-11.9-30.4-11.5-102.1-11.5-136.6s-.4-106.3 11.5-136.6c7.8-20.1 23.6-35.9 43.7-43.7 30.4-11.9 102.1-11.5 136.6-11.5s106.3-.4 136.6 11.5c20.1 7.8 35.9 23.6 43.7 43.7 11.9 30.4 11.5 102.1 11.5 136.6s.4 106.3-11.5 136.6z" />
+            </svg>
+``
     <footer>
         <p>&copy; 2024 Ansh. All Rights Reserved.</p>
     </footer>
